syntax = "proto2";

package com.jdb.netty7;

option optimize_for = SPEED;
option java_package = "com.jdb.netty7";
option java_outer_classname = "MyDataInfo";

message MyMessage {
    enum DataType {
        PersonType = 1;
        DogType = 2;
    }
    required DataType data_type = 1;
    //oneof： dataBody内只会有一个属性生效
    oneof dataBody {
        Person person = 2;
        Dog dog = 3;
    }
}
message Person {
    required string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}
message Dog {
    optional string dog_name = 1;
    optional int32 dog_age = 2;
}


